--- a/src/Components/AddProduct/SideNavbar/SideNavbar.css
+++ b/src/Components/AddProduct/SideNavbar/SideNavbar.css
@@ -1,66 +1,74 @@
-.side-navbar{  
-  width: 20%;
-  height: 100vh;
-  color: white;
-  background-color: #8E7D45;
-  display: flex;
-  flex-direction: column;
-  align-items: center;  
-}
-
-.side-navbar-tabs{
+.side-navbar {
+    width: 20%;
+    height: 100vh;
+    color: white;
+    background-color: #8E7D45;
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: fixed;
 }
-.side-navbar-tabs div{
+
+.side-navbar-tabs {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+}
+
+.side-navbar-tabs div {
     margin-block: 20px;
 }
-.side-navbar-mangment{
+
+.side-navbar-mangment {
     position: relative;
+    width: 100%;
+    text-align: center;
 }
-.side-navbar-mangment:hover .side-navbar-menu{
+
+.side-navbar-mangment:hover .side-navbar-menu {
     display: flex;
 }
 
-.side-navbar-mangment .side-navbar-menu{
-    position: absolute;
-    left:86%;
-    top: 20%;
+.side-navbar-mangment .side-navbar-menu {
+    position: relative;
     z-index: 1;
-    width: fit-content;
+    width: 99%;
     display: none;
-    flex-direction:column;
+    flex-direction: column;
     text-align: center;
-    background-color: white;
+    background-color: #8E7D45;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
 }
-.side-navbar-mangment .side-navbar-menu .side-navbar-links{
+
+.side-navbar-mangment .side-navbar-menu .side-navbar-links {
     width: 100%;
-    color: #8E7D45 ;
+    color: white;
     text-decoration: none;
     border-bottom: solid 1px #8E7D45;
 }
-.side-navbar-mangment .side-navbar-menu .side-navbar-links:hover{
-    color: white;
-    background-color: #8E7D45;
-} 
 
-.log-out{
-    position: relative;
-    top: 75%;
+.side-navbar-mangment .side-navbar-menu .side-navbar-links:hover {
+    color: #0D065E;
+    background-color: #8E7D45;
 }
 
-.log-out button{
+.log-out {
+    top: 90%;
+    position: fixed;
+}
+
+.log-out button {
     border: none;
     background: none;
     color: white;
 }
-.log-out button:hover{
+
+.log-out button:hover {
     color: #0D065E;
 }
 
-.side-navbar-toggle-btn{
+.side-navbar-toggle-btn {
     display: none;
     margin-right: 20px;
     width: 50px;
@@ -68,62 +76,78 @@
     border: solid 2px white;
 }
 
-.side-navbar-toggle-btn:focus{
-    box-shadow: 2px 2px 2px 2px rgba(255,255,255,0.3);
+.side-navbar-toggle-btn:focus {
+    box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.3);
 }
 
-@media (max-width:910px){
-    .side-navbar{
+@media (max-width:910px) {
+    .side-navbar {
         width: 100%;
         height: fit-content;
         position: relative;
         z-index: 1;
     }
 
-    .side-navbar-toggle{
+    .side-navbar-toggle {
         width: 100%;
-        display: flex ; 
+        display: flex;
         justify-content: space-between;
         padding-left: 20px;
     }
-    .sbrand{
+
+    .sbrand {
         margin-top: 5px;
     }
-    
-    .side-navbar-toggle-btn{
+
+    .side-navbar-toggle-btn {
         display: inline;
         margin-bottom: 12px;
     }
 
-    .side-navbar-tabs{
+    .side-navbar-tabs {
         display: none;
+        width: 100%;
     }
-    .side-navbar-tabs div{
+
+    .side-navbar-tabs div {
         margin-block: 15px;
+        justify-content: center;
+        align-items: center;
+        display: flex;
+        flex-direction: column;
+        width: 100%;
     }
 
     /* ///////////////// */
 
-    .side-navbar-mangment .side-navbar-menu{
-        position:relative;
-        top:35%;
-        left: 35%;
+    .side-navbar-mangment .side-navbar-menu {
+        position: relative;
+        top: 0;
+        left: 0;
+        width: 100%;
         background: none;
         /* box-shadow: none; */
         /* text-align: start; */
     }
-    .side-navbar-mangment .side-navbar-menu .side-navbar-links{
+
+    .side-navbar-mangment .side-navbar-menu .side-navbar-links {
         color: white;
     }
-    .side-navbar-mangment .side-navbar-menu .side-navbar-links:hover{
+
+    .side-navbar-mangment .side-navbar-menu .side-navbar-links:hover {
         color: #0D065E;
     }
-    
+
+    .side-navbar-mangment {
+
+        width: 100%
+    }
+
     /* //////////////////// */
 }
 
-@media (min-width:911px){
-    .side-navbar-tabs{
+@media (min-width:911px) {
+    .side-navbar-tabs {
         display: flex !important;
     }
 }
