--- a/src/Components/Offers/Classificationbar/Classificationbar.css
+++ b/src/Components/Offers/Classificationbar/Classificationbar.css
@@ -1,11 +1,11 @@
-.classificationbar-offers{
+.classificationbar{
     margin: 0px;
     padding:50px 30px 30px 20px;
     width:250px;
     line-height:33px;
 }
 
-.classificationbar-offers button{
+.classificationbar button{
     width: 130px;
     border: none;
     background-color: #F4C444;
