--- a/src/Components/AddProduct/SideNavbar/SideNavbar.css
+++ b/src/Components/AddProduct/SideNavbar/SideNavbar.css
@@ -33,12 +33,13 @@
 .side-navbar-mangment .side-navbar-menu {
     position: relative;
     z-index: 1;
-    width: 99%;
+    width: 100%;
     display: none;
     flex-direction: column;
     text-align: center;
     background-color: #8E7D45;
     box-shadow: 5px 5px 5px 5px rgba(0, 0, 0, 0.4);
+    margin-bottom: 0px;
 }
 
 .side-navbar-mangment .side-navbar-menu .side-navbar-links {
@@ -80,7 +81,7 @@
     box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.3);
 }
 
-@media (max-width:910px) {
+@media (max-width:930px) {
     .side-navbar {
         width: 100%;
         height: fit-content;
@@ -143,10 +144,14 @@
         width: 100%
     }
 
+    .log-out{
+        position: relative;
+    }
+
     /* //////////////////// */
 }
 
-@media (min-width:911px) {
+@media (min-width:931px) {
     .side-navbar-tabs {
         display: flex !important;
     }
